# kook-tracker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  Event.py  LICENSE  README.md  app.py  client.py  config.py  docker-compose.yml  event.py  example.ipynb  initialize.py  kook-tracker.py  league.py  pyproject.toml  requirements.txt  update_rosters.py
.ebextensions/: app.config  db.config  flask.config
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: db-backup.yml  scheduled-drafts.yml
app/: __init__.py  parsers.py  routes.py  updates.py
app/models/: mixins.py  wsl.py
kook-tracker/: .flaskenv  client.py  config.py  entrypoint.sh  kook-tracker.py
kook-tracker/app/: __init__.py  kooks.py  parsers.py  rosters.py  routes.py  updates.py
kook-tracker/app/models/: mixins.py  wsl.py
kook-tracker/app/rosters/: teams.json  year_longs.json
kook-tracker/app/static/: preview-season.html  preview.html
kook-tracker/app/static/styles/: event.css
kook-tracker/app/templates/: base.html  event.html  index.html  season-with-year-longs.html  season.html
kook-tracker/migrations/: env.py
kook-tracker/migrations/versions/: 098bc38adff7_first_migration.py  46e9e4b0831c_first_migration.py  9bd534a4f694_adding_event_stat_id.py  a84a86d05cf5_first_migration.py
migrations/versions/: 781d22e1c1cb_creating_heat_association_table.py  c8939b9e6926_heat_result_table.py
ops/: event_schedule.json  reminders_sent.json  run_scheduled_drafts.py  update_rosters.py
ops/messages/: reminder.j2  summary.j2  warn.j2
