[project]
name = "kook-tracker"
version = "0.1.0"
description = "Fantasy WSL tracker"
requires-python = ">=3.12"
dependencies = [
    "attrs",
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "python-dotenv",
    "psycopg2-binary",
    "beautifulsoup4",
    "lxml",
    "colorutils",
    "requests",
    "google-api-python-client",
    "google-auth",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "prek",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.config
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
